tests/pass/test-pow1.mc
int main() {
    printf(2.0 ** 4.0);
    return 0;
}
