tests/fail/fail-if2.mc
int main()
{
  if (true) {
    foo; /* Error: undeclared variable */
  }
}
